manifests/base/edu-goods/deployment.yaml
# edu-goods/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edu-goods-deployment
  namespace: edu-goods
spec:
  replicas: 2
  selector:
    matchLabels:
      app: edu-goods
  template:
    metadata:
      labels:
        app: edu-goods
    spec:
      containers:
        - name: edu-goods-container
          image: your-goods-image:tag
          ports:
            - containerPort: 8080
