manifests/base/edu-goods/service.yaml
# edu-goods/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edu-goods-service
  namespace: edu-goods
spec:
  selector:
    app: edu-goods
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
